crates/biome_cli/tests/snapshots/main_commands_lint/should_skip_nonexistent_staged_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --staged
```

## `exists.js`

```js
console.log('exists');
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
