crates/biome_cli/tests/snapshots/main_commands_lint/skip_plugin_skips_plugins.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --skip=plugin file.js
```

## `biome.json`

```json
{
  "plugins": ["noManualZIndex.grit"]
}
```

## `file.js`

```js
const merged = Object.assign({}, a, b);
debugger
```

## `noManualZIndex.grit`

```grit
`$fn($args)` where {
    $fn <: `Object.assign`,
    register_diagnostic(
        span = $fn,
        message = "Prefer object spread instead of Object.assign()",
        severity = "warn"
    )
}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:7 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable merged is unused.
  
  > 1 │ const merged = Object.assign({}, a, b);
      │       ^^^^^^
    2 │ debugger
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend merged with an underscore.
  
    1   │ - const·merged·=·Object.assign({},·a,·b);
      1 │ + const·_merged·=·Object.assign({},·a,·b);
    2 2 │   debugger
  

```

```block
file.js:2:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    1 │ const merged = Object.assign({}, a, b);
  > 2 │ debugger
      │ ^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 1 │   const merged = Object.assign({}, a, b);
    2   │ - debugger
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
