crates/biome_cli/tests/snapshots/main_commands_lint/top_level_all_true_group_level_all_false.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "all": true,
      "style": {
        "all": false
      }
    }
  }
}
```

## `fix.js`

```js

    function f() {arguments;}
    const FOO = "FOO";
    var x, y;
    
```

# Emitted Messages

```block
fix.js:2:19 lint/correctness/noUndeclaredVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The arguments variable is undeclared.
  
  > 2 │     function f() {arguments;}
      │                   ^^^^^^^^^
    3 │     const FOO = "FOO";
    4 │     var x, y;
  
  i By default, Biome recognizes browser and Mode.js globals.
    You can ignore more globals using the javascript.globals configuration.
  

```

```block
fix.js:2:14 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This function is unused.
  
  > 2 │     function f() {arguments;}
      │              ^
    3 │     const FOO = "FOO";
    4 │     var x, y;
  
  i Unused variables usually are result of incomplete refactoring, typos and other source of bugs.
  

```

```block
fix.js:3:11 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable is unused.
  
    2 │     function f() {arguments;}
  > 3 │     const FOO = "FOO";
      │           ^^^
    4 │     var x, y;
    5 │     
  
  i Unused variables usually are result of incomplete refactoring, typos and other source of bugs.
  
  i Unsafe fix: If this is intentional, prepend FOO with an underscore.
  
    1 1 │   
    2 2 │       function f() {arguments;}
    3   │ - ····const·FOO·=·"FOO";
      3 │ + ····const·_FOO·=·"FOO";
    4 4 │       var x, y;
    5 5 │       
  

```

```block
fix.js:4:9 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable is unused.
  
    2 │     function f() {arguments;}
    3 │     const FOO = "FOO";
  > 4 │     var x, y;
      │         ^
    5 │     
  
  i Unused variables usually are result of incomplete refactoring, typos and other source of bugs.
  
  i Unsafe fix: If this is intentional, prepend x with an underscore.
  
    2 2 │       function f() {arguments;}
    3 3 │       const FOO = "FOO";
    4   │ - ····var·x,·y;
      4 │ + ····var·_x,·y;
    5 5 │       
  

```

```block
fix.js:4:12 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable is unused.
  
    2 │     function f() {arguments;}
    3 │     const FOO = "FOO";
  > 4 │     var x, y;
      │            ^
    5 │     
  
  i Unused variables usually are result of incomplete refactoring, typos and other source of bugs.
  
  i Unsafe fix: If this is intentional, prepend y with an underscore.
  
    2 2 │       function f() {arguments;}
    3 3 │       const FOO = "FOO";
    4   │ - ····var·x,·y;
      4 │ + ····var·x,·_y;
    5 5 │       
  

```

```block
Checked 1 file in <TIME>. No fixes needed.
Found 5 warnings.
```
