crates/biome_cli/tests/snapshots/main_commands_lint/top_level_recommended_true_group_level_all_false.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "suspicious": {
        "all": false
      }
    }
  }
}
```

## `fix.js`

```js
let a = 0; let b = 0; a = (b = 1) + 1;
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes were applied.
```
